--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -160,6 +160,7 @@ label {
   margin-bottom: rem(54px);
 
   &-label {
+    font-size: rem(16px);
     display: block;
     margin-bottom: rem(10px);
     color: $dark-grayish-cyan;
